Space out non-logo donation lines (fixes wrapping)

--- a/djangoproject/static/scss/_style.scss
+++ b/djangoproject/static/scss/_style.scss
@@ -2949,6 +2949,7 @@ form .footnote {
 			vertical-align: top;
 		}
 		.no-logo-hero {
+			min-height: 60px;
 			margin-right: 12px;
 		}
 		div {
